RESOLVED FIXED Bug 266064
[MSE] MediaSourcePrivate::buffered() shouldn't call its client
https://bugs.webkit.org/show_bug.cgi?id=266064
Summary [MSE] MediaSourcePrivate::buffered() shouldn't call its client
Jean-Yves Avenard [:jya]
Reported 2023-12-08 03:59:47 PST
This is one of the remaining synchronous call between the MediaSourcePrivate and its MediaSourcePrivateClient (the MediaSource object itself). There's no need for the MediaSourcePrivate to retrieve the buffered range from the MediaSource, the buffered range should be owned by the MediaSourcePrivate instead
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-08 04:00:04 PST
Jean-Yves Avenard [:jya]
Comment 2 2023-12-08 04:33:10 PST
EWS
Comment 3 2023-12-08 22:52:45 PST
Committed 271794@main (bf1d50b780f1): <https://commits.webkit.org/271794@main> Reviewed commits have been landed. Closing PR #21498 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.